Refs #60303 fix fixed header logo too low on logged in

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1464,6 +1464,7 @@ header {
       .block-unesco-common-site-branding {
         @include min-screen($screen-tablet) {
           top: 0.75rem;
+          position: static;
         }
 
         a {
